# demo-repository

./: db.sqlite3  pyproject.toml
.github/workflows/: auto-assign.yml  deploy.yml  static.yml  unit-test.yml  unit_test.yml
app/: models.py  tests.py
app/migrations/: 0001_initial.py
mysite/: settings.py
