[tool.poetry]
name = "demo-repository"
version = "0.1.0"
description = ""
authors = ["Mohibullah Ahmadzai <mohibullah70@gmail.com>"]
readme = "README.md"
packages = [{include = "demo_repository"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
graphene-django = "^3.1.5"
pytest = "^7.4.3"
psycopg2-binary = "^2.9.9"
pyrebase4 = "^4.7.1"
matplotlib = "^3.8.2"
unidecode = "^1.3.7"
python-magic = "^0.4.27"
gunicorn = "^21.2.0"
django-taggit = "^5.0.1"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
